--- a/Blazor_Inventory.csproj
+++ b/Blazor_Inventory.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BlazorMaterialIcons" Version="0.0.1" />
+  </ItemGroup>
+
 </Project>
